# esda_simulation_2025

./: .gitignore  CMakeLists.txt  README.md  frames_2026-01-31_12.15.06.gv  my_map_save.yaml  my_map_serial.data
.devcontainer/: Dockerfile  devcontainer.json
config/: mapper_params_localization.yaml  mapper_params_online_async.yaml  my_controllers_2wd.yaml
description/: lidar.xacro  robot.urdf.xacro  robot_visual.xacro  ros2_control_2wd.xacro
install/: local_setup.sh  setup.sh
install/esda_hardware_2025/share/esda_hardware_2025/: esda_hardware_2025.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
log/: latest_build
models/orange_igvc/: model.sdf
models/orange_igvc/meshes/: construction_barrel.dae
src/esda_hardware_2025/: CMakeLists.txt  esda_hardware_2025.xml
src/esda_hardware_2025/hardware/: esda_hardware_2025.cpp
src/esda_hardware_2025/hardware/include/esda_hardware_2025/: esda_hardware_2025.hpp  stm_comms.hpp  visibility_control.h  wheels.hpp
src/esda_hardware_2025/include/esda_hardware_2025/: esda_hardware_2025.hpp
src/esda_simulation_2025/: CMakeLists.txt  LANE_DETECTION.md  README.md  TO RUN.txt  package.xml
src/esda_simulation_2025/assets/: arm_endcap.part  arm_endcap.stl  arm_rhs.part  arm_rhs.stl  bearing_spacer.part  bearing_spacer.stl  bort_motor.part  bort_rim.part  bort_rim.stl  bort_tire.part  bort_tire.stl  caster_arm_r.part  caster_arm_r.stl  cstr_wheel_rim.part  cstr_wheel_rim.stl  cstr_wheel_tyre.part  cstr_wheel_tyre.stl  drve_arm_bracket.part  drve_arm_bracket.stl  drve_bottom_plate.part  drve_bottom_plate.stl  drve_middle.part  drve_middle.stl  drve_output_carrier.part  drve_output_carrier.stl  drve_top_plate.part  drve_top_plate.stl  fcid_body_left__configuration_ali_2mm.part  fcid_body_left__configuration_ali_2mm.stl  fcid_body_right__configuration_ali_2mm.part  fcid_body_right__configuration_ali_2mm.stl  fcid_camera_mount.part  fcid_camera_mount.stl  fcid_divider__configuration_ali_2mm.part  fcid_divider__configuration_ali_2mm.stl  fcid_divider_mount__configuration_ali_2mm.part  fcid_divider_mount__configuration_ali_2mm.stl  fcid_gps_fin.part  fcid_gps_fin.stl  fcid_lid__configuration_ali_2mm.part  (+25 more)
src/esda_simulation_2025/config/: joystick.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  my_controllers_2wd.yaml  nav2_params.yaml  view_bot.rviz  vlp16.yaml
src/esda_simulation_2025/description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core_ref.xacro  robot_visual.xacro  ros2_control_2wd.xacro
src/esda_simulation_2025/launch/: joystick_launch.launch.py  launch_robot.launch.py  launch_sim.launch.py  lidar.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
src/esda_simulation_2025/maps/: feb14_igvc.data  feb14_igvc.pgm  feb14_igvc.yaml  igvc_test_feb14.pgm  igvc_test_feb14.yaml  igvc_test_map_feb1.pgm  igvc_test_map_feb1.yaml  map_jan31_1.pgm  map_jan31_1.yaml  my_map.pgm  my_map.yaml  my_map_save.pgm
src/esda_simulation_2025/scripts/: lane_detection.py  teleop_wasd.py  ui_launch.py  ui_launch_real_robot.py  waypoint_navigator.py
src/esda_simulation_2025/worlds/: igvc.sdf  sim_world_bball_new.sdf  sim_world_ic.sdf
src/esda_simulation_2025/worlds/models/orange_igvc/: model.sdf
src/esda_simulation_2025/worlds/models/orange_igvc/materials/scripts/: ground.material
src/esda_simulation_2025/worlds/models/orange_igvc/meshes/: ground.dae
worlds/: igvc.sdf  sim_world.sdf
(+126 files in other folders)
