<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esda_simulation_2025</name>
  <version>0.0.0</version>
  <description>The package for ESDA Vehicle Simulation 2025</description>
  <maintainer email="my_email@email.com">Yide Tao</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
    <gz_sim_resource_path>${prefix}/..</gz_sim_resource_path>
    <ign_gazebo_resource_path>${prefix}/..</ign_gazebo_resource_path>
  </export>
</package>
